--- a/css/style.css
+++ b/css/style.css
@@ -1,59 +1,5 @@
 @font-face {
   font-family: 'Poppins';
-  font-style: italic;
-  font-weight: 100;
-  src: url(https://fonts.gstatic.com/s/poppins/v22/pxiAyp8kv8JHgFVrJJLmE0tCMPc.ttf) format('truetype');
-}
-@font-face {
-  font-family: 'Poppins';
-  font-style: italic;
-  font-weight: 200;
-  src: url(https://fonts.gstatic.com/s/poppins/v22/pxiDyp8kv8JHgFVrJJLmv1pVF9eL.ttf) format('truetype');
-}
-@font-face {
-  font-family: 'Poppins';
-  font-style: italic;
-  font-weight: 300;
-  src: url(https://fonts.gstatic.com/s/poppins/v22/pxiDyp8kv8JHgFVrJJLm21lVF9eL.ttf) format('truetype');
-}
-@font-face {
-  font-family: 'Poppins';
-  font-style: italic;
-  font-weight: 400;
-  src: url(https://fonts.gstatic.com/s/poppins/v22/pxiGyp8kv8JHgFVrJJLucHtF.ttf) format('truetype');
-}
-@font-face {
-  font-family: 'Poppins';
-  font-style: italic;
-  font-weight: 500;
-  src: url(https://fonts.gstatic.com/s/poppins/v22/pxiDyp8kv8JHgFVrJJLmg1hVF9eL.ttf) format('truetype');
-}
-@font-face {
-  font-family: 'Poppins';
-  font-style: italic;
-  font-weight: 600;
-  src: url(https://fonts.gstatic.com/s/poppins/v22/pxiDyp8kv8JHgFVrJJLmr19VF9eL.ttf) format('truetype');
-}
-@font-face {
-  font-family: 'Poppins';
-  font-style: italic;
-  font-weight: 700;
-  src: url(https://fonts.gstatic.com/s/poppins/v22/pxiDyp8kv8JHgFVrJJLmy15VF9eL.ttf) format('truetype');
-}
-@font-face {
-  font-family: 'Poppins';
-  font-style: italic;
-  font-weight: 800;
-  src: url(https://fonts.gstatic.com/s/poppins/v22/pxiDyp8kv8JHgFVrJJLm111VF9eL.ttf) format('truetype');
-}
-@font-face {
-  font-family: 'Poppins';
-  font-style: italic;
-  font-weight: 900;
-  src: url(https://fonts.gstatic.com/s/poppins/v22/pxiDyp8kv8JHgFVrJJLm81xVF9eL.ttf) format('truetype');
-}
-@font-face {
-  font-family: 'Poppins';
   font-style: normal;
   font-weight: 100;
   src: url(https://fonts.gstatic.com/s/poppins/v22/pxiGyp8kv8JHgFVrLPTucHtF.ttf) format('truetype');
@@ -113,64 +59,78 @@
   font-display: swap;
   src: url(https://fonts.gstatic.com/s/syncopate/v22/pe0pMIuPIYBCpEV5eFdKvtKaAw.ttf) format('truetype');
 }
-* {
-  box-sizing: border-box !important;
-  transition: ease all 0.5s;
-}
 body {
-  width: 100%;
-  height: 100%;
-  color: #666666;
-  font-size: 1em;
   font-family: 'Poppins', sans-serif;
-  line-height: 1.8;
-  font-weight: normal;
-  overflow-x: hidden;
+  background-color: #eae7e7;
+  margin: 0;
+  padding: 0;
 }
-.about_main .collection_section {
-  width: 100%;
-  float: left;
-  margin-top: 40px;
-}
-.about_main .collection_section .container .new_text,
-.about_main .collection_section .container .consectetur_text {
-  width: 100%;
-  float: left;
-}
-.about_main .collection_section .container .new_text {
-  font-size: 2em;
-  color: #0c0116;
-}
-.about_main .collection_section .container .consectetur_text {
-  font-size: 1.2em;
-  color: #0c0116;
-  font-weight: 400;
-  margin-left: 0px;
-  padding-bottom: 30px;
-}
-.about_main .collection_section_3 {
-  width: 100%;
-  float: left;
-  padding-top: 0px;
+.main-layout {
+  text-align: center;
 }
 .collection_text {
-  width: 100%;
-  float: left;
-  color: #ffffff;
-  text-align: center;
-  font-family: 'Syncopate', sans-serif;
+  font-size: 30px;
   font-weight: bold;
-  font-size: 3em;
+  text-transform: uppercase;
+  color: #ffffff;
   background-color: #cf434f;
-  padding: 30px 0px;
+  padding: 15px;
+}
+.collection_section {
+  padding: 30px 0;
+}
+.collection_section h1 {
+  font-size: 28px;
+  color: #666666;
+}
+.collection_section p {
+  font-size: 16px;
+  color: #666666;
+  max-width: 600px;
+  margin: auto;
+}
+.collectipn_section_3 .racing_shoes {
+  background-color: #eae7e7;
+  padding: 40px 0;
+}
+.collectipn_section_3 .racing_shoes .row {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.collectipn_section_3 .racing_shoes .shoes-img3 img {
+  width: 100%;
+  max-width: 400px;
+}
+.collectipn_section_3 .racing_shoes .sale_text {
+  font-size: 26px;
+  font-weight: bold;
+  color: #cf434f;
+}
+.collectipn_section_3 .racing_shoes .sale_text span {
+  color: #0c0116;
+}
+.collectipn_section_3 .racing_shoes .number_text {
+  font-size: 28px;
+  font-weight: bold;
+  color: #0c0116;
+}
+.collectipn_section_3 .racing_shoes .seemore {
+  font-size: 18px;
+  font-weight: bold;
+  border: none;
+  padding: 12px 24px;
+  background-color: #a02020;
+  color: #ffffff;
+  cursor: pointer;
+}
+.collectipn_section_3 .racing_shoes .seemore:hover {
+  background-color: #761818;
 }
 .copyright {
-  width: 100%;
-  float: left;
-  font-size: 1em;
-  color: #ffffff;
   text-align: center;
-  padding: 10px 0px;
+  padding: 15px;
   background-color: #cf434f;
-  font-family: 'Poppins', sans-serif;
+  color: #ffffff;
+  font-size: 14px;
 }
